@@ -1,3 +1,9 @@
+2001-12-27  "OMAE, jun" <jun-o@dai.meta.ne.jp>
+
+	* [w3m-dev 02735]
+	* indep.c (bcopy): need (chat *) cast
+	* indep.c (bzero): use char * instead of void *
+
 2001-12-26  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* istream.h: #include <x509v3.h> deleted
